# rocode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SERDE_JSON_C_DECISIONS.md  USER_GUIDE.md
crates/rocode-agent/: Cargo.toml
crates/rocode-agent/src/: message.rs
crates/rocode-cli/: Cargo.toml  build.rs
crates/rocode-cli/src/: agent_stream_adapter.rs  api_client.rs  auth.rs  cli.rs  db.rs  debug.rs  event_stream.rs  generate.rs  github.rs  import_export.rs  main.rs  providers.rs  remote.rs  run.rs  server.rs  server_lifecycle.rs  session_cmd.rs  skill_cmd.rs  tui.rs
crates/rocode-cli/src/run/: frontend_state.rs  interaction.rs  interactive_session.rs  session_projection.rs  sse.rs  ui_actions.rs
crates/rocode-command/: Cargo.toml
crates/rocode-command/commands/: autoresearch-debug.md  autoresearch-fix.md  autoresearch-plan.md  autoresearch-security.md  autoresearch-ship.md  autoresearch.md
crates/rocode-command/governance/: scheduler_stage_fixture.json
crates/rocode-command/src/: actions.rs  agent_presenter.rs  cli_markdown.rs  cli_panel.rs  cli_permission.rs  cli_prompt.rs  cli_select.rs  cli_spinner.rs  cli_style.rs  governance_fixtures.rs  interactive.rs  lib.rs  output_blocks.rs  stage_protocol.rs  terminal_presentation.rs  terminal_segment_display.rs  terminal_tool_block_display.rs
crates/rocode-config/src/: category.rs  loader.rs  schema.rs  store.rs  wellknown.rs
crates/rocode-content/: Cargo.toml
crates/rocode-content/src/: lib.rs  output_blocks.rs  stage_protocol.rs
crates/rocode-core/: Cargo.toml
crates/rocode-core/src/: agent_task_registry.rs  jsonrpc.rs  process_registry.rs
crates/rocode-execution-types/: Cargo.toml
crates/rocode-execution-types/src/: lib.rs  lifecycle.rs
crates/rocode-grep/src/: search.rs
crates/rocode-lsp/: Cargo.toml
crates/rocode-lsp/src/: lib.rs
crates/rocode-mcp/src/: auth.rs  transport.rs
crates/rocode-memory/: Cargo.toml
crates/rocode-memory/src/: authority.rs  consolidation.rs  lib.rs  rules.rs  validation.rs
crates/rocode-message/: Cargo.toml
crates/rocode-message/src/: finish.rs  id.rs  lib.rs  message.rs  part.rs  role.rs  status.rs  usage.rs
crates/rocode-multimodal/: Cargo.toml
crates/rocode-multimodal/src/: capabilities.rs  config.rs  explain.rs  lib.rs  parts.rs  ports.rs  render.rs  types.rs
crates/rocode-orchestrator/: Cargo.toml
crates/rocode-orchestrator/src/: agent_tree.rs  iterative_workflow.rs  iterative_workflow_runtime.rs  lib.rs  lifecycle.rs  output_metadata.rs  request_execution.rs  skill_graph.rs  skill_list.rs  skill_tree.rs  traits.rs  types.rs  workflow_artifacts.rs  workflow_mode.rs  workflow_workspace.rs
crates/rocode-permission/src/: engine.rs  lib.rs  matching.rs  model.rs  ruleset.rs
crates/rocode-plugin/: Cargo.toml
crates/rocode-plugin/examples/: verify_native_dylib.rs
crates/rocode-plugin/src/: cabi.rs  hook_io.rs  hook_names.rs  lib.rs
crates/rocode-provider/: Cargo.toml
crates/rocode-provider/src/: azure.rs  bootstrap.rs  bridge.rs  catalog.rs  convert.rs  driver.rs  error_classification.rs  lib.rs  message.rs  models.rs  protocol.rs  protocol_loader.rs  provider.rs  responses.rs  responses_convert.rs  stream.rs  tools.rs  transform.rs
crates/rocode-provider/tests/: instance_test.rs  protocol_routing_test.rs  protocol_test.rs  provider_integration.rs  provider_registry_snapshot.rs  v2_compliance.rs
crates/rocode-runtime-context/: Cargo.toml
crates/rocode-runtime-context/src/: lib.rs
crates/rocode-server/: Cargo.toml  build.rs
crates/rocode-server/assets/: autoresearch.scheduler.jsonc
crates/rocode-server/src/: error.rs  lib.rs  mcp_oauth.rs  oauth.rs  recovery.rs  runtime_control.rs  server.rs  web.rs
crates/rocode-server/web/: app.css  app.css.backup  app.dom.test.mjs  app.js  fixture-preview.html  fixture-settings-preview.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/rocode-session/: Cargo.toml
crates/rocode-session/src/: compaction.rs  lib.rs  message.rs  message_v2.rs  (+9 more)
crates/rocode-skill/: Cargo.toml
crates/rocode-skill/src/: artifact.rs  audit.rs  authority.rs  catalog.rs  detail.rs  discovery.rs  distribution.rs  errors.rs  governance.rs  guard.rs  hub.rs  lib.rs  lifecycle.rs  methodology.rs  runtime.rs  sync.rs  types.rs  write.rs
crates/rocode-state/: Cargo.toml
crates/rocode-state/src/: lib.rs
crates/rocode-storage/: Cargo.toml
crates/rocode-storage-migration/: Cargo.toml
crates/rocode-storage-migration/src/: idents.rs  lib.rs  m20260317_000001_create_sessions.rs  m20260317_000002_create_messages.rs  m20260317_000003_create_parts.rs  m20260317_000004_create_todos.rs  m20260317_000005_create_permissions.rs  m20260317_000006_create_session_shares.rs  m20260317_000007_create_indexes.rs  m20260317_000008_legacy_alter_columns.rs  m20260317_000009_migrate_tool_call_input_data.rs  m20260317_000010_add_pagination_indexes.rs  m20260318_000012_backfill_parts_from_messages_data.rs
crates/rocode-storage/src/: database.rs  lib.rs  repository.rs  schema.rs
crates/rocode-storage/src/entities/: messages.rs  mod.rs  parts.rs  permissions.rs  session_shares.rs  sessions.rs  todos.rs
crates/rocode-tool/: Cargo.toml
crates/rocode-tui/: Cargo.toml
crates/rocode-types/: Cargo.toml
crates/rocode-voice/: Cargo.toml
crates/rocode-voice/src/: lib.rs
crates/rocode-watcher/: Cargo.toml
doc/: rocode-non-ui-architecture.md  rocode-server-startup-before-first-session.md
docs/: README.md  agents.md  auth.md  commands.md  configuration.md  hooks.md  index.md  installation.md  mcp.md  opencode_config.json  plugins.md  rocode-storage.md  scheduler.md  session-message-storage.md  skills.md  storage-cache-config.md  tools.md
docs/plugins_example/: README.md
icons/: rocode.icns
packaging/linux/: rocode.desktop
packaging/macos/: Info.plist.template
scripts/: autoresearch_e2e_smoke.py  build_macos_app_bundle.sh  capture_web_fixture_preview.sh  check-pharmacy-demo-basics.sh  evaluate-course-qa.sh  evaluate-natural-product-model.sh  scan_legacy_config.py  sync_version.sh
(+424 files in other folders)
