[package]
name = "rocode-command"
version = "2026.3.8"
edition = "2021"

[dependencies]
rocode-agent = { path = "../rocode-agent" }
rocode-plugin = { path = "../rocode-plugin" }
rocode-tool = { path = "../rocode-tool" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
regex = "1.10"
tracing = "0.1"
glob = "0.3"
pulldown-cmark = "0.13"
crossterm = "0.27"

chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
