[package]
name = "rocode-execution-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-provider = { path = "../rocode-provider" }
serde_json = { workspace = true }
tracing = { workspace = true }
