[package]
name = "rocode-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-command = { path = "../rocode-command" }
rocode-config = { path = "../rocode-config" }
rocode-runtime-context = { path = "../rocode-runtime-context" }
rocode-state = { path = "../rocode-state" }
rocode-storage = { path = "../rocode-storage" }
rocode-types = { path = "../rocode-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
