[package]
name = "rocode-multimodal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-config = { path = "../rocode-config" }
rocode-provider = { path = "../rocode-provider" }
rocode-session = { path = "../rocode-session" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
