[package]
name = "rocode-runtime-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-config = { path = "../rocode-config" }
rocode-state = { path = "../rocode-state" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
