[package]
name = "rocode-skill"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-config = { path = "../rocode-config" }
rocode-types = { path = "../rocode-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
flate2 = "1"
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
