[package]
name = "rocode-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-types = { path = "../rocode-types" }
rocode-util = { path = "../rocode-util" }
rocode-storage-migration = { path = "../rocode-storage-migration" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
